fix(css): alignment

--- a/app/assets/stylesheets/site/_global.sass
+++ b/app/assets/stylesheets/site/_global.sass
@@ -140,7 +140,7 @@ table td.shrink
 .inline-search-icon
   position: relative
   z-index: 1
-  left: -30px
+  margin-left: -30px
   top: 9px
   color: $color_primary
   cursor: pointer
